- Fix: Remove overlap of side bar button with card/list menu button on mobile browser
Thanks to xet7 !

Closes #2183

--- a/client/components/sidebar/sidebar.styl
+++ b/client/components/sidebar/sidebar.styl
@@ -201,7 +201,7 @@
     width: 40px
     height: @width
     left: -@width - 7px
-    top: 5px
+    top: 70px
     display: block
     border-radius: 50%
     border: 1px solid darken(white, 30%)
